--- a/variable-hands-config/index.html
+++ b/variable-hands-config/index.html
@@ -23,34 +23,34 @@
     <div class='item-container'>
       <div class='item-container-content'>
         <div class='item'>
-          Use this configuration page to choose the settings you would like applied to this app.
+          Variable Hands
         </div>
       </div>
     </div>
 
-    <div class='item-container'>
-      <div class='item-container-header'>Customizability</div>
-      <div class='item-container-content'>
-        <label class='item'>
-          Background Color
-          <input id='background_color_picker' type='text' class='item-color item-color-sunny' value='#000000'>
-        </label>
-      </div>
-      <div class='item-container-footer'>
-        Choose the app's background color. Used if High Contrast Mode is not selected. Note: Only available on Basalt watches that support many colors.
-      </div>
-    </div>
+    <!-- <div class='item-container'> -->
+    <!--   <div class='item-container-header'>Customizability</div> -->
+    <!--   <div class='item-container-content'> -->
+    <!--     <label class='item'> -->
+    <!--       Background Color -->
+    <!--       <input id='background_color_picker' type='text' class='item-color item-color-sunny' value='#000000'> -->
+    <!--     </label> -->
+    <!--   </div> -->
+    <!--   <div class='item-container-footer'> -->
+    <!--     Choose the app's background color. Used if High Contrast Mode is not selected. Note: Only available on Basalt watches that support many colors. -->
+    <!--   </div> -->
+    <!-- </div> -->
 
     <div class='item-container'>
-      <div class='item-container-header'>Accessibility</div>
+      <div class='item-container-header'>Hands</div>
       <div class='item-container-content'>
         <label class='item'>
-          High Contrast Mode
-          <input id='high_contrast_checkbox' type='checkbox' class='item-toggle'>
+          Seconds Hand
+          <input id='second_hand_slider' type='checkbox' class='item-toggle'>
         </label>
       </div>
       <div class='item-container-footer'>
-        This switches the app colors to a higher contrast set that promotes readability in low light.
+        Show the second hand.
       </div>
     </div>
 
@@ -62,17 +62,14 @@
   </body>
   <script>
   function getConfigData() {
-    var backgroundColorPicker = document.getElementById('background_color_picker');
-    var highContrastCheckbox = document.getElementById('high_contrast_checkbox');
+    var tickSetting = document.getElementById('second_hand_slider');
  
     var options = {
-      'background_color': backgroundColorPicker.value,
-      'high_contrast': highContrastCheckbox.checked
+      'tickSetting': second_hand_slider.checked
     };
 
     // Save for next launch
-    localStorage['background_color'] = options['background_color'];
-    localStorage['high_contrast'] = options['high_contrast'];
+    localStorage['second_hand'] = options['second_hand'];
 
     console.log('Got options: ' + JSON.stringify(options));
     return options;
@@ -100,13 +97,11 @@
   });
 
   (function() {
-    var backgroundColorPicker = document.getElementById('background_color_picker');
-    var highContrastCheckbox = document.getElementById('high_contrast_checkbox');
+    var tickSetting = document.getElementById('second_hand_slider');
 
     // Load any previously saved configuration, if available
-    if(localStorage['high_contrast']) {
-      highContrastCheckbox.checked = JSON.parse(localStorage['high_contrast']);
-      backgroundColorPicker.value = localStorage['background_color'];
+    if(localStorage['second_hand']) {
+      tickSetting.checked = JSON.parse(localStorage['second_hand']);
     }
   })();
   </script>
