--- a/variable-hands-config/index.html
+++ b/variable-hands-config/index.html
@@ -46,7 +46,7 @@
       <div class='item-container-content'>
         <label class='item'>
           Seconds Hand
-          <input id='second_hand_slider' type='checkbox' class='item-toggle'>
+          <input id='tick_setting_slider' type='checkbox' class='item-toggle'>
         </label>
       </div>
       <div class='item-container-footer'>
@@ -61,31 +61,31 @@
     </div>
   </body>
   <script>
-  function getConfigData() {
-    var tickSetting = document.getElementById('second_hand_slider');
- 
-    var options = {
-      'tickSetting': second_hand_slider.checked
-    };
-
+//  function getConfigData() {
+//    var tickSetting = document.getElementById('tick_setting_slider');
+// 
+//    var options = {
+//      'tickSetting': tick_setting_slider.checked
+//    };
+//
     // Save for next launch
-    localStorage['second_hand'] = options['second_hand'];
+//    localStorage['tick_setting'] = options['tick_setting'];
+//
+//    console.log('Got options: ' + JSON.stringify(options));
+//    return options;
+//  }
 
-    console.log('Got options: ' + JSON.stringify(options));
-    return options;
-  }
-
-  function getQueryParam(variable, defaultValue) {
-    var query = location.search.substring(1);
-    var vars = query.split('&');
-    for (var i = 0; i < vars.length; i++) {
-      var pair = vars[i].split('=');
-      if (pair[0] === variable) {
-        return decodeURIComponent(pair[1]);
-      }
-    }
-    return defaultValue || false;
-  }
+//  function getQueryParam(variable, defaultValue) {
+//    var query = location.search.substring(1);
+//    var vars = query.split('&');
+//    for (var i = 0; i < vars.length; i++) {
+//      var pair = vars[i].split('=');
+//      if (pair[0] === variable) {
+//        return decodeURIComponent(pair[1]);
+//      }
+//    }
+//    return defaultValue || false;
+//  }
  
   var submitButton = document.getElementById('submit_button');
   submitButton.addEventListener('click', function() {
@@ -97,11 +97,11 @@
   });
 
   (function() {
-    var tickSetting = document.getElementById('second_hand_slider');
+    var tickSetting = document.getElementById('tick_setting_slider');
 
     // Load any previously saved configuration, if available
-    if(localStorage['second_hand']) {
-      tickSetting.checked = JSON.parse(localStorage['second_hand']);
+    if(localStorage['tick_setting']) {
+      tickSetting.checked = JSON.parse(localStorage['tick_setting']);
     }
   })();
   </script>
