--- a/variable-hands-config/index.html
+++ b/variable-hands-config/index.html
@@ -75,17 +75,17 @@
 //    return options;
 //  }
 
-//  function getQueryParam(variable, defaultValue) {
-//    var query = location.search.substring(1);
-//    var vars = query.split('&');
-//    for (var i = 0; i < vars.length; i++) {
-//      var pair = vars[i].split('=');
-//      if (pair[0] === variable) {
-//        return decodeURIComponent(pair[1]);
-//      }
-//    }
-//    return defaultValue || false;
-//  }
+  function getQueryParam(variable, defaultValue) {
+    var query = location.search.substring(1);
+    var vars = query.split('&');
+    for (var i = 0; i < vars.length; i++) {
+      var pair = vars[i].split('=');
+      if (pair[0] === variable) {
+        return decodeURIComponent(pair[1]);
+      }
+    }
+    return defaultValue || false;
+  }
  
   var submitButton = document.getElementById('submit_button');
   submitButton.addEventListener('click', function() {
