--- a/variable-hands-config/index.html
+++ b/variable-hands-config/index.html
@@ -61,19 +61,19 @@
     </div>
   </body>
   <script>
-//  function getConfigData() {
-//    var tickSetting = document.getElementById('tick_setting_slider');
-// 
-//    var options = {
-//      'tickSetting': tick_setting_slider.checked
-//    };
-//
-    // Save for next launch
-//    localStorage['tick_setting'] = options['tick_setting'];
-//
-//    console.log('Got options: ' + JSON.stringify(options));
-//    return options;
-//  }
+ function getConfigData() {
+   var tickSetting = document.getElementById('tick_setting_slider');
+
+   var options = {
+     'tickSetting': tick_setting_slider.checked
+   };
+
+    Save for next launch
+   localStorage['tick_setting'] = options['tick_setting'];
+
+   console.log('Got options: ' + JSON.stringify(options));
+   return options;
+ }
 
   function getQueryParam(variable, defaultValue) {
     var query = location.search.substring(1);
