Geez.  Well... just look.

--- a/variable-hands-config/index.html
+++ b/variable-hands-config/index.html
@@ -68,7 +68,7 @@
      'tickSetting': tick_setting_slider.checked
    };
 
-    Save for next launch
+   // Save for next launch
    localStorage['tick_setting'] = options['tick_setting'];
 
    console.log('Got options: ' + JSON.stringify(options));
