--- a/variable-hands-config/index.html
+++ b/variable-hands-config/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+A<!DOCTYPE html>
 <html>
   <head>
   <title>Slate Example Configuration</title>
@@ -69,7 +69,7 @@
    };
 
    // Save for next launch
-   localStorage['tick_setting'] = options['tick_setting'];
+   localStorage['tick_setting'] = options['tickSetting'];
 
    console.log('Got options: ' + JSON.stringify(options));
    return options;
