Tweaked some text.

--- a/variable-hands-config/index.html
+++ b/variable-hands-config/index.html
@@ -29,7 +29,6 @@
     </div>
 
     <div class='item-container'>
-      <div class='item-container-header'>Hands</div>
       <div class='item-container-content'>
         <label class='item'>
           Second Hand
@@ -42,7 +41,6 @@
     </div>
 
     <div class='item-container'>
-      <div class='item-container-header'>Hands</div>
       <div class='item-container-content'>
         <label class='item'>
           Show Day
@@ -50,12 +48,11 @@
         </label>
       </div>
       <div class='item-container-footer'>
-        Show the second hand.
+        Draw a date window with the current day in it.
       </div>
     </div>
 
     <div class='item-container'>
-      <div class='item-container-header'>Hands</div>
       <div class='item-container-content'>
         <label class='item'>
           Invert Colors
@@ -63,7 +60,7 @@
         </label>
       </div>
       <div class='item-container-footer'>
-        Show the second hand.
+        Invert the entire watchface.
       </div>
     </div>
 
