Added the OTHER forgotten initializers.  Sheesh.

--- a/variable-hands-config/index.html
+++ b/variable-hands-config/index.html
@@ -107,6 +107,8 @@
 
   (function() {
     var tickSetting = document.getElementById('tick_setting_slider');
+    var daySetting = document.getElementById('day_setting_slider');
+    var invertSetting = document.getElementById('invert_setting_slider');
 
     // Load any previously saved configuration, if available
     if(localStorage['tick_setting']) {
