--- a/variable-hands-config/index.html
+++ b/variable-hands-config/index.html
@@ -2,13 +2,14 @@
 <html>
   <head>
   <title>Variable Hands Configuration</title>
-  <link rel='stylesheet' type='text/css' href='css/slate.min.css'>
-  <script src='js/slate.min.js'></script>
+  <link rel="stylesheet" type="text/css" href="css/slate.min.css">
+  <script src="js/slate.min.js"></script>
+  <script src="js/variable-hands.js"></script>
   <style>
   .title {
     padding: 15px 10px;
     text-transform: uppercase;
-    font-family: 'PT Sans', sans-serif;
+    font-family: "PT Sans", sans-serif;
     font-size: 1.2em;
     font-weight: 500;
     color: #888888;
@@ -18,104 +19,73 @@
   </head>
 
   <body>
-    <h1 class='title'>Variable Hands Configuration</h1>
+    <h1 class="title">Variable Hands Configuration</h1>
 
-    <div class='item-container'>
-      <div class='item-container-content'>
-        <label class='item'>
+    <div class="item-container">
+      <div class="item-container-content">
+        <label class="item">
           Second Hand
-          <input id='tick_setting_slider' type='checkbox' class='item-toggle'>
+          <input id="tick_setting_slider" type="checkbox" class="item-toggle">
         </label>
       </div>
-      <div class='item-container-footer'>
+      <div class="item-container-footer">
         Show the second hand.
       </div>
     </div>
 
-    <div class='item-container'>
-      <div class='item-container-content'>
-        <label class='item'>
+<div class="item-container">
+  <div class="item-container-content">
+    <label class="item">
+      Second Hand Start Time
+      <input type="range" min="0" max="24" class="item-slider" name="second_hand_start_slider" value="0">
+      <div class="item-input-wrapper item-slider-text">
+        <input type="text" class="item-input" name="second_hand_start_value_box" value="0" id="second_hand_start">
+      </div>
+    </label>
+  </div>
+  <div class="item-container-content">
+    <label class="item">
+      Second Hand End Time
+      <input type="range" min="0" max="24" class="item-slider" name="second_hand_end_slider" value="24">
+      <div class="item-input-wrapper item-slider-text">
+        <input type="text" class="item-input" name="second_hand_end_value_box" value="24" id="second_hand_end">
+      </div>
+    </label>
+  </div>
+  <div class="item-container-footer">
+    Only draw the second hand between these hours (to conserver battery).
+  </div>
+</div>
+
+    <div class="item-container">
+      <div class="item-container-content">
+        <label class="item">
           Show Day
-          <input id='day_setting_slider' type='checkbox' class='item-toggle'>
+          <input id="day_setting_slider" type="checkbox" class="item-toggle">
         </label>
       </div>
-      <div class='item-container-footer'>
+      <div class="item-container-footer">
         Draw a date window with the current day in it.
       </div>
     </div>
 
-    <div class='item-container'>
-      <div class='item-container-content'>
-        <label class='item'>
+    <div class="item-container">
+      <div class="item-container-content">
+        <label class="item">
           Invert Colors
-          <input id='invert_setting_slider' type='checkbox' class='item-toggle'>
+          <input id="invert_setting_slider" type="checkbox" class="item-toggle">
         </label>
       </div>
-      <div class='item-container-footer'>
+      <div class="item-container-footer">
         Invert the entire watchface.
       </div>
     </div>
 
 
-    <div class='item-container'>
-      <div class='button-container'>
-        <input id='submit_button' type='button' class='item-button' value='SUBMIT'>
+    <div class="item-container">
+      <div class="button-container">
+        <input id="submit_button" type="button" class="item-button" value="SUBMIT">
       </div>
     </div>
   </body>
-  <script>
- function getConfigData() {
-   var tickSetting = document.getElementById('tick_setting_slider');
-   var daySetting = document.getElementById('day_setting_slider');
-   var invertSetting = document.getElementById('invert_setting_slider');
-
-   var options = {
-     'tickSetting': tick_setting_slider.checked,
-     'daySetting': day_setting_slider.checked,
-     'invertSetting': invert_setting_slider.checked 
-   };
-
-   // Save for next launch
-   localStorage['tick_setting'] = options['tickSetting'];
-   localStorage['day_setting'] = options['daySetting'];
-   localStorage['invert_setting'] = options['invertSetting'];
-
-   console.log('Got options: ' + JSON.stringify(options));
-   return options;
- }
-
-  function getQueryParam(variable, defaultValue) {
-    var query = location.search.substring(1);
-    var vars = query.split('&');
-    for (var i = 0; i < vars.length; i++) {
-      var pair = vars[i].split('=');
-      if (pair[0] === variable) {
-        return decodeURIComponent(pair[1]);
-      }
-    }
-    return defaultValue || false;
-  }
- 
-  var submitButton = document.getElementById('submit_button');
-  submitButton.addEventListener('click', function() {
-    console.log('Submit');
-
-    // Set the return URL depending on the runtime environment
-    var return_to = getQueryParam('return_to', 'pebblejs://close#');
-    document.location = return_to + encodeURIComponent(JSON.stringify(getConfigData()));
-  });
-
-  (function() {
-    var tickSetting = document.getElementById('tick_setting_slider');
-    var daySetting = document.getElementById('day_setting_slider');
-    var invertSetting = document.getElementById('invert_setting_slider');
-
-    // Load any previously saved configuration, if available
-    if(localStorage['tick_setting']) {
-      tickSetting.checked = JSON.parse(localStorage['tick_setting']);
-      daySetting.checked = JSON.parse(localStorage['day_setting']);
-      invertSetting.checked = JSON.parse(localStorage['invert_setting']);
-    }
-  })();
-  </script>
 </html>
