Fixed typo and fixed some `name's.

--- a/variable-hands-config/index.html
+++ b/variable-hands-config/index.html
@@ -33,29 +33,27 @@
       </div>
     </div>
 
-<div class="item-container">
-  <div class="item-container-content">
-    <label class="item">
-      Second Hand Start Time
-      <input type="range" min="0" max="24" class="item-slider" name="second_hand_start_slider" value="0">
-      <div class="item-input-wrapper item-slider-text">
-        <input type="text" class="item-input" name="second_hand_start_value_box" value="0" id="second_hand_start">
+    <div class="item-container">
+      <div class="item-container-content">
+	<label class="item">
+	  Second Hand Start Time
+	  <input type="range" min="0" max="24" class="item-slider" name="second_hand_start_slider" value="0">
+	  <div class="item-input-wrapper item-slider-text">
+            <input type="text" class="item-input" name="second_hand_start_slider" value="0" id="second_hand_start">
+	  </div>
+	</label>
+	<label class="item">
+	  Second Hand End Time
+	  <input type="range" min="0" max="24" class="item-slider" name="second_hand_end_slider" value="24">
+	  <div class="item-input-wrapper item-slider-text">
+            <input type="text" class="item-input" name="second_hand_end_slider" value="24" id="second_hand_end">
+	  </div>
+	</label>
       </div>
-    </label>
-  </div>
-  <div class="item-container-content">
-    <label class="item">
-      Second Hand End Time
-      <input type="range" min="0" max="24" class="item-slider" name="second_hand_end_slider" value="24">
-      <div class="item-input-wrapper item-slider-text">
-        <input type="text" class="item-input" name="second_hand_end_value_box" value="24" id="second_hand_end">
+      <div class="item-container-footer">
+	Only draw the second hand between these hours (to conserve battery).
       </div>
-    </label>
-  </div>
-  <div class="item-container-footer">
-    Only draw the second hand between these hours (to conserver battery).
-  </div>
-</div>
+    </div>
 
     <div class="item-container">
       <div class="item-container-content">
