--- a/variable-hands-config/index.html
+++ b/variable-hands-config/index.html
@@ -22,12 +22,19 @@
     <div class="item-container">
       <div class="item-container-content">
         <label class="item">
-          Second Hand
+          NOTE: These configuration options will work with the latest version of the watchface only.
+        </label>
+      </div>
+    </div>
+    <div class="item-container">
+      <div class="item-container-content">
+        <label class="item">
+          Show Second Hand
           <input id="tick_setting_slider" type="checkbox" class="item-toggle">
         </label>
       </div>
       <div class="item-container-footer">
-        Show the second hand.
+        Draw the second hand.
       </div>
     </div>
 
@@ -60,9 +67,41 @@
           <input id="day_setting_slider" type="checkbox" class="item-toggle">
         </label>
       </div>
-
       <div class="item-container-footer">
         Draw a date window with the current day in it.
+      </div>
+    </div>
+
+    <div class="item-container">
+      <div class="item-container-content">
+        <label class="item">
+          Show Digital Time
+          <input id="digital_setting_slider" type="checkbox" class="item-toggle">
+        </label>
+      </div>
+      <div class="item-container-footer">
+	Draw the digital time above the `6'.
+      </div>
+    </div>
+
+
+    <div class="item-container">
+      <div class="item-container-content">
+	<label class="item">
+	  Info Window Color
+	  <input type="text" class="item-color item-color-sunny" id="window_color" value="0xffffff">
+	</label>
+	<label class="item">
+	  Info Border Color
+	  <input type="text" class="item-color item-color-sunny" id="window_border_color" value="0x555555">
+	</label>
+	<label class="item">
+	  Info Text Color
+	  <input type="text" class="item-color item-color-sunny" id="window_text_color" value="0x000000">
+	</label>
+      </div>
+      <div class="item-container-footer">
+	Colors for the day and digital time windows.
       </div>
     </div>
 
